<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="200dp"
    android:paddingBottom="40dp"
    tools:context="org.harvard.edu.cscie57a.paymentcalendar.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/hello"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/name_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint" />
    <Button
        android:id="@+id/enter_name_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:onClick="showCalendarView"/>


</LinearLayout>