<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_root"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/enteramounttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountText"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount_text" />
            <TextView
                android:id="@+id/presymbolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/amountinputedittext"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount_hint">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/postsymbolText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/enterdescriptiontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_description_text" />

        <EditText
            android:id="@+id/descriptioninputedittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description_hint">

            <requestFocus />
        </EditText>



    </LinearLayout>
</android.support.constraint.ConstraintLayout>