<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hello_string"
            android:layout_width="110dp"
            android:layout_height="37dp"
            android:text="@string/hello"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/username_string"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"
            android:paddingBottom="4dp"
            android:textSize="15sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <ImageView
            android:id="@+id/previousMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/previous_month" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/yearText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/year"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/currentYear"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/monthText"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/month"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/space"
                android:textColor="#64569F"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/currentMonth"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="#64569F"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/nextMonth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/next_month" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weekdayNames"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="#ffffffff" >

        <TextView
            android:id="@+id/day0"
            style="@style/weekendName" />
        <TextView
            android:id="@+id/day1"
            style="@style/weekdayName" />

        <TextView
            android:id="@+id/day2"
            style="@style/weekdayName" />

        <TextView
            android:id="@+id/day3"
            style="@style/weekdayName" />

        <TextView
            android:id="@+id/day4"
            style="@style/weekdayName" />

        <TextView
            android:id="@+id/day5"
            style="@style/weekdayName" />

        <TextView
            android:id="@+id/day6"
            style="@style/weekendName" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ff8091a8" />

    <ViewFlipper
        android:id="@+id/flipper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/payment_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_payment_advice" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:text="@string/total_amount"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/total_amount"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:text="@string/date_selected"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/date_selected"
        android:layout_width="fill_parent"
        android:layout_height="41dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:textSize="20sp"
        android:textStyle="italic"/>

</LinearLayout>